# uclv-rh8d-force-control

./: CMakeLists.txt  README.md  README_euler.md  README_proportional.md  package.xml
README/: README_close_node.md  README_euler_integrator_controller_node.md  README_force_norm_node.md  README_open_node.md  README_proportional.md  README_proportional_controller_node.md  README_slipping_avoidance.md  README_tasknode.md
config/: common_config.yaml  params.yaml  params2.yaml  params3.yaml  params4.yaml
launch/: controller.launch.py  master.launch.py  test.launch.py
repo_controller/src/: integrator_node.cpp
src/: close_node.cpp  euler_integrator_controller_node.cpp  euler_integrator_node.cpp  force_norm_node.cpp  gain_node.cpp  open_node.cpp  proportional_controller_node.cpp  slipping.cpp  slipping_avoidance_node.cpp  taks_node.cpp  task_node.cpp  task_node2.cpp  task_node3.cpp
